# Irodori-TTS-MLX

./: .gitignore  .pr-body-issue-31.md  MANIFEST.in  README.ja.md  README.md  pyproject.toml
.github/workflows/: hosted-preconverted-weights-smoke.yml  packaging-python-matrix.yml  v0.1-release-gate.yml  v3-hosted-generation.yml  voicedesign-hosted-generation.yml  voicedesign-real-checkpoint.yml
docs/: README.md  architecture.md  baseline-report-template.md  baseline.md  benchmark.md  caption_condition_support.md  checkpoint_support.md  codec_artifact_layout.md  dacvae_architecture.md  dacvae_bridge.md  dacvae_codec_contract.json  dacvae_decode_parity.md  dacvae_encode_parity.md  downstream_openclaw_smoke.md  first_audio_latency.md  first_audio_latency_report_schema.json  hosted_dacvae_codec_artifacts.md  hosted_rf_dit_artifacts.md  hosted_weights_layout.md  hosted_weights_usage.md  license_and_distribution.md  mlx_audio_dacvae_contract.md  mlx_audio_interop.md  packaging.md  preconverted_weights_redistribution_audit.md  public_api_stability.md  pytorch_parity.md  rf_dit_forward.md  rf_sampler.md  text_preprocessing.md  upstream_dependency.md  upstream_parity_harness.md  upstream_parity_report_schema.json  v0_1_release_gate.md  v0_2_delivery_plan.md  v3_support.md  weight_mapping.md
docs/baseline-reports/: 2026-05-11-apple-silicon-pytorch-baseline.md  2026-05-16-upstream-mlx-parity-baseline.md  2026-05-18-real-upstream-mlx-generation-parity.md
docs/benchmark-reports/: 2026-05-12-apple-silicon-memory-residency-mitigation.md  2026-05-12-apple-silicon-mlx-bridge.md  2026-05-12-apple-silicon-mlx-followup.md  2026-05-14-apple-silicon-num-steps-presets.md  2026-05-14-apple-silicon-num-steps-v3-reference.md  2026-05-14-apple-silicon-num-steps-v3-text.md  2026-05-14-apple-silicon-num-steps-voicedesign.md  2026-05-14-apple-silicon-persistent-batch.md  2026-05-16-apple-silicon-hosted-weights.md  2026-05-18-apple-silicon-codec-runtime-modes.md  2026-05-18-apple-silicon-dacvae-decode-profile.md  2026-05-18-apple-silicon-persistent-batch-cleanup-comparison.md  2026-05-18-apple-silicon-persistent-batch.md  (+7 more)
irodori_mlx/: __init__.py  codec_worker.py  config.py  dacvae.py  duration.py  encoders.py  hosted_artifacts.py  hosted_codec.py  hosted_weights.py  layers.py  mlx_audio_adapter.py  model.py  runtime.py  sampling.py  text_normalization.py  weights.py
scripts/: __init__.py  adapt_mlx_audio.py  benchmark.py  benchmark_persistent_batch.py  benchmark_persistent_serving.py  check_dacvae_decode_parity.py  check_dacvae_encode_parity.py  collect_baseline_env.py  convert_dacvae_codec.py  convert_dacvae_decoder.py  convert_weights.py  generate_wav.py  inspect_checkpoint.py  report_ultra_fast_sweep.py  run_upstream_parity.py  run_v0_1_release_gate.py  run_v3_generation_ci.py  run_voicedesign_generation_ci.py  run_voicedesign_integration.py  web_ui.py
tests/: test_benchmark_persistent_batch_script.py  test_benchmark_persistent_serving_script.py  test_benchmark_script.py  test_caption_condition_support_doc.py  test_check_dacvae_decode_parity_script.py  test_check_dacvae_encode_parity_script.py  test_checkpoint_family_ux.py  test_codec_artifact_layout_doc.py  test_convert_dacvae_codec_script.py  test_convert_dacvae_decoder_script.py  test_convert_weights_script.py  test_dacvae_codec_contract_doc.py  test_dacvae_decode_parity_doc.py  test_dacvae_decoder_modules.py  test_dacvae_encode_parity_doc.py  test_dacvae_mlx_parity_fixtures.py  test_downstream_openclaw_smoke_doc.py  test_duration.py  test_encoders.py  test_first_audio_latency_doc.py  test_generate_wav_script.py  test_hosted_codec_artifact.py  test_hosted_rf_dit_artifacts.py  test_hosted_weights_layout_doc.py  test_hosted_weights_runtime.py  test_hosted_weights_smoke.py  test_hosted_weights_usage_doc.py  test_layers.py  test_mlx_audio_adapter.py  test_mlx_audio_dacvae_contract_doc.py  test_mlx_audio_interop_doc.py  test_model.py  test_packaging_metadata.py  test_public_docs_sanitized.py  test_pytorch_parity.py  test_report_ultra_fast_sweep_script.py  test_run_upstream_parity_script.py  test_run_v0_1_release_gate_script.py  test_run_v3_generation_ci_script.py  test_run_voicedesign_generation_ci_script.py  (+7 more)
(+1 files in other folders)
