[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irodori-tts-mlx"
version = "0.2.0a1"
description = "Apple Silicon-focused MLX inference prototype for Irodori-TTS"
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [{ name = "t0yohei" }]
keywords = ["mlx", "apple-silicon", "tts", "audio", "machine-learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "mlx>=0.25,<1",
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
runtime = [
  "soundfile>=0.12,<1",
  "sentencepiece>=0.1.99,<0.2; python_version < '3.12'",
  "sentencepiece>=0.2,<1; python_version >= '3.12'",
  "torch>=2.6,<3",
  "torchaudio>=2.6,<3",
  "transformers>=4.51,<5",
]
bench = [
  "safetensors>=0.4,<1",
  "soundfile>=0.12,<1",
  "sentencepiece>=0.1.99,<0.2; python_version < '3.12'",
  "sentencepiece>=0.2,<1; python_version >= '3.12'",
  "torch>=2.6,<3",
  "torchaudio>=2.6,<3",
  "transformers>=4.51,<5",
]
web = [
  "gradio>=4.44,<6",
]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "safetensors>=0.4,<1",
  "soundfile>=0.12,<1",
  "sentencepiece>=0.1.99,<0.2; python_version < '3.12'",
  "sentencepiece>=0.2,<1; python_version >= '3.12'",
  "torch>=2.6,<3",
  "torchaudio>=2.6,<3",
  "transformers>=4.51,<5",
]

[project.urls]
Homepage = "https://github.com/t0yohei/Irodori-TTS-MLX"
Repository = "https://github.com/t0yohei/Irodori-TTS-MLX"
Issues = "https://github.com/t0yohei/Irodori-TTS-MLX/issues"

[project.scripts]
irodori-tts-generate = "scripts.generate_wav:cli_main"
irodori-tts-web = "scripts.web_ui:cli_main"
irodori-tts-convert = "scripts.convert_weights:cli_main"
irodori-tts-convert-dacvae-codec = "scripts.convert_dacvae_codec:cli_main"
irodori-tts-convert-dacvae-decoder = "scripts.convert_dacvae_decoder:main"
irodori-tts-inspect = "scripts.inspect_checkpoint:cli_main"
irodori-tts-adapt-mlx-audio = "scripts.adapt_mlx_audio:cli_main"

[tool.setuptools.packages.find]
include = ["irodori_mlx*", "scripts*"]
